--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "homepage": "https://github.com/LuisMayo/TelegramHateMod#readme",
   "dependencies": {
     "@luismayo/schinquirer": "^0.4.1",
+    "@types/node-persist": "^3.1.0",
     "cross-fetch": "^3.0.5",
+    "node-persist": "^3.1.0",
     "telegraf": "^3.38.0",
     "typescript": "^4.0.2"
   },
